# qemu-iso-lab

./: .gitignore  CLAUDE.md  Makefile  README.it.md  README.md  VM_MANAGER_PLAN.md  copy-to-ventoy.sh  pyproject.toml  run-boot.sh  run-install.sh  setup-vhd.sh  vms.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ARCH_GRUB_BOOT_FIX.md  CI_BOOT_STRATEGY.md  PROFILE_TODO.md
legacy/: README.md
scripts/: verify-split.sh
tests/: _common.py  test_archinstall.py  test_cli.py  test_cloud_init.py  test_config.py  test_disk_inspect.py  test_flash.py  test_import_dev.py  test_iso.py  test_kickstart.py  test_lifecycle.py  test_manage.py  test_post_install.py  test_preseed.py  test_repo_profiles.py  test_vmctl.py  test_vmtui.py
vmctl/: __init__.py  archinstall.py  cli.py  cloud_init.py  config.py  disk_inspect.py  errors.py  flash.py  host_setup.py  import_dev.py  iso.py  kickstart.py  lifecycle.py  preseed.py  qemu.py  runtime.py  ssh.py  state.py  ui.py
vms/: catalog.json  remotes.json.example
vms/profile-files/arch-noctalia-local/niri/: config.kdl
vms/profiles/: arch.json  bsd.json  core.json  debian.json  explore.json  fedora.json  local.json.example  nix.json  opensuse.json  priority.json  windows.json
